# langgraph-incident-agent

./: .env  .env.example  .gitignore  ARCHITECTURE.md  README.md  agent_state.db  agent_state.db-shm  agent_state.db-wal  pyproject.toml
app/: dependencies.py  logging_config.py  main.py  settings.py
app/api/: runs.py
app/graph/: llm_subagents.py  nodes.py  state.py  workflow.py
app/llm/: base.py  factory.py  mock_provider.py  ollama_provider.py  openai_provider.py
app/services/: runtime.py
app/static/: index.html
scripts/: demo_pause_resume.py
tests/: test_api_pause_resume.py  test_llm_factory.py
